[package]
name = "mweb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { version = "*" }
httparse= { version = "*" }
log= { version = "*" }
env_logger= { version = "*" }
rustls = { version = "*" }

[dev-dependencies]
http_req = "*"